--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,13 @@
         rel="stylesheet"
     />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta 
+        name="viewport"
+        content="
+            width=device-width, 
+            initial-scale=1.0
+        "
+    />
     <title>CRM system</title>
   </head>
   <body>
