--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,6 +57,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="/env-config.js"></script>
     <script type="module" src="/src/application/root.jsx"></script>
   </body>
 </html>
