--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
         rel="icon"
         type="image/png"
         sizes="32x32"
-        href="favicon/favicon-32x32.png"
+        href="/favicon/favicon-32x32.png"
     />
     <link
         rel="icon"
